# ml_heating_underfloor

./: .env  .env_sample  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE_TODO.md  build.yaml  calibrated_params.json  calibrated_params_3600.json  calibration_config_1800.json  calibration_config_720.json  calibration_data_1800.csv  calibration_data_720.csv  check_flow_rates.py  check_new_measurements.py  config_adapter.py  debug_calibration.py  export_V2.py  log.txt  patch_script.py  physics_calibration_standalone.py  pyproject.toml  repository.yaml  requirements.txt  run.sh  supervisord.conf  tmp1ot_y9_q.tmp  tmpp2ebri6m.tmp  tmpyzaodjph.tmp  unified_thermal_state.json  validate_container.py  verify_persistence.py
.github/: copilot-instructions.md
Logs/: 74f4b7ef_ml_heating_underfloor_2026-04-28T07-31-47.536Z  Ha_log.txt  unified_thermal_state.json
dashboard/: data_service.py  health.py
docs/: ADAPTIVE_FIREPLACE_LEARNING_GUIDE.md  ADAPTIVE_LEARNING_INFLUXDB_EXPORT.md  ADAPTIVE_LEARNING_THRESHOLD_ANALYSIS.md  BINARY_TO_PHYSICS_TRANSFORMATION.md  BUGFIX_PARAMETER_PERSISTENCE_DRIFT.md  CONFIGURATION_PARAMETER_FIXES.md  CONTRIBUTOR_WORKFLOW.md  DELTA_FORECAST_CALIBRATION_GUIDE.md  EMERGENCY_STABILITY_CONTROLS.md  HA_SENSORS_FOR_CALIBRATION.md  HEAT_BALANCE_CONTROLLER_INTEGRATION.md  HOME_ASSISTANT_SENSOR_ATTRIBUTES_GUIDE.md  INFLUXDB_FEATURE_BUCKET_GUIDE.md  INSTALLATION_GUIDE.md  LABEL_STRATEGY.md  OUTLET_EFFECTIVENESS_CALIBRATION_GUIDE.md  PARAMETER_REFERENCE.md  PRICE_OPTIMIZATION_INTEGRATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  (+11 more)
(+354 files in other folders)
